2012-12-10  chalabi

	* DESCRIPTION: Updated maintainer, note and version fields
	* src/UnitRootMacKinnon.f: Using now print and exit R Fortran
	  interface
	* R/UnitrootUrcaInterface.R: Fixed partial argument matches
	* NAMESPACE: Added NAMESPACE

2011-09-23  mmaechler

	* DESCRIPTION: remove deprecated "LazyLoad" entry

2011-06-08  mmaechler

	* man/UnitrootUrcaInterface.Rd, src/UnitRootMacKinnon.f: cosmetics
	  (Fortran: get rid of warning)

2010-07-23  chalabi

	* inst/DocCopying.pdf: removed DocCopying.pdf license is already
	  specified in DESCRIPTION file

2009-09-30  chalabi

	* DESCRIPTION: updated version number

2009-09-29  chalabi

	* ChangeLog, DESCRIPTION: updated DESC and ChangeLog

2009-04-02  chalabi

	* DESCRIPTION: more explicit depends and suggests field in DESC
	  file.

2009-04-01  chalabi

	* DESCRIPTION: updated DESC file
