@@ -1,7 +1,7 @@
 Package: fUnitRoots
-Version: 2160.77
-Revision: 5414
-Date: 2012-12-10
+Version: 3010.78
+Revision: 5526
+Date: 2013-06-23
 Title: Trends and Unit Roots
 Author: Diethelm Wuertz and many others, see the SOURCE file
 Depends: R (>= 2.4.0), urca, methods, timeDate, timeSeries, fBasics
@@ -15,6 +15,7 @@ Note: Several parts are still preliminary and may be changed in the
 LazyData: yes
 License: GPL (>= 2)
 URL: http://www.rmetrics.org
-Packaged: 2012-12-10 14:17:00 UTC; yankee
+Packaged: 2013-06-23 18:22:11 UTC; yohan
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2012-12-10 17:26:04
+Date/Publication: 2013-06-24 01:55:20
