@@ -1,11 +1,11 @@
-0978f136925c5dfc07e78c8f21895a53 *ChangeLog
-b702088193f7e0d598433a11cb69fd0b *DESCRIPTION
+980f641a5916cbc6042e83e1983cf7cd *ChangeLog
+1303de617c4e01ed3d1e423757eec6fd *DESCRIPTION
 083b97c04a7552bb7e365eb371c82acd *NAMESPACE
 40edbd7f4354eefc5d53a7543b29b9b9 *R/DickeyFullerPValues.R
 bb8e764b2c5361a3651005052bdab6a2 *R/MacKinnonPValues.R
 35ac016aa28d55afb2cf80fca5b023be *R/UnitrootTests.R
 bff20930a588974144397fda88b6d04b *R/UnitrootUrcaInterface.R
-e4221e49b35c0f7fa73a1de4350806ec *R/zzz.R
+e7ec8f93cf92c68e6d1daa5ca08380c0 *R/zzz.R
 6042b9c5e5bec3ecc1b6959cd2858b64 *inst/COPYRIGHT.html
 cf086ce2edda5147cda840865b36deab *inst/unitTests/Makefile
 22f90b37db8e97315237b33b182c6749 *inst/unitTests/runTests.R
@@ -17,5 +17,5 @@ daf5a9b426a80e9de7c9d8f942024b1b *man/DickeyFullerPValues.Rd
 9fcff3ced79896862a140cc308d7a086 *man/MacKinnonPValues.Rd
 8a67de8fd689bba2b30b3f154a570961 *man/UnitrootTests.Rd
 09f4a4e81cbd2c9b75b466290b594611 *man/UnitrootUrcaInterface.Rd
-1d848c9e918f0eafbb64d4aa0e593e78 *src/Makevars
+3996e7c16bfb96fad295ee425815cb4d *src/Makevars
 62dc6239beba43b5febe5a4e18081793 *src/UnitRootMacKinnon.f
