@@ -1,2 +1,1 @@
 PKG_LIBS=$(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
-FFLAGS=-w
